--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "nuxt": "^2.0.0",
     "@nuxtjs/bulma": "^1.2.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^8.0.0",
+    "vue-style-loader": "^4.1.2"
+  }
 }
